# loyal-backend

./: .env.example  .gitignore  README.md  envoy.yaml  example.proto  main.py  pyproject.toml
grpc/query/: __init__.py
src/phala/: phala_constants.py  phala_model.py  phala_schemas.py  phala_service.py
src/query/: query_schemas.proto  query_schemas.py  query_service.py
src/shared/: database.py  exceptions.py  http.py  logging_utils.py  secrets.py
